@@ -12,6 +12,7 @@ git-annex (6.20160319) UNRELEASED; urgency=medium
     Thanks, Robie Basak
   * log: Display time with time zone.
   * log --raw-date: Use to display seconds from unix epoch.
+  * v6: Close pointer file handles more quickly, to avoid problems on Windows.
 
  -- Joey Hess <id@joeyh.name>  Wed, 23 Mar 2016 11:42:36 -0400
 
